--- a/sample/Careers.html
+++ b/sample/Careers.html
@@ -32,7 +32,7 @@
   </div>
   <div class="container">
       <p><h1>Openings for the position of Associate Software.</h1></p>
-      <p><h4>1. 2019, 2020 passed out students are eligible(Branch: CSE, IT).</h4></p>
+      <p><h4>1. Students with Bachelor's or Master's degree(Branch: CSE, IT) are eligible for this role.</h4></p>
       <p><h4>2. Min of 2+ years of experience in the field of software engineer role.</h4></p>
       <p><h4>3. Should be capable of developing the code for frontend end and back end.</h4> </p>
 
