--- a/sample/Home.html
+++ b/sample/Home.html
@@ -17,7 +17,7 @@
   <div class="fixed-header">
       <div class="container">
           <nav align="right">
-            <img src="bg--s3://hostwebsiteaurora/backgroundimage1.jpg" alt="Avatar" width="100" height="50" class="image" align="left">
+            <img src="Aurorasolutionslogo.jpeg" alt="Avatar" width="100" height="50" class="image" align="left">
               <a href="Home.html">Home</a>
               <a href="Careers.html">Careers</a>
               <a href="new.html">Contact Us</a>
@@ -25,11 +25,10 @@
           
       </div>
   </div>
-  <div align="left" color="green">
+  <div color="green">
     <dr></dr><dr></dr><dr></dr>
     <!--<img src="backgroundimage.jpg" alt="Snow" style="width:100%;">-->
     <p><h3>Aurora aims to develop a single stop solution hub  </h3></p>
-    <dr></dr>
     <p><h3>Entire information technology requirements of the modern organizations.</h3></p>
     <p><h3>In Aurora Solutions the products and services are technologically advanced </h3></p>
     <p><h3>Aurora Solutions is well-known as one of the leading software development and solution provider serving clients across the globe</h3></p>
